--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.3.1",
+        "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/typography": "^0.4.0",
-        "alpinejs": "^3.0.6",
+        "alpinejs": "^2.7.3",
+        "autoprefixer": "^10.1.0",
         "axios": "^0.21.1",
         "cross-env": "^7.0",
         "laravel-mix": "^6.0.25",
         "lodash": "^4.17.19",
-        "postcss-import": "^14.0.1",
+        "postcss": "^8.2.1",
+        "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "^2.2.2"
+        "tailwindcss": "^2.0.2"
     }
 }
